--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = pyhealthy.settings
 # -- recommended but optional:
-python_files = tests.py test_*.py *_tests.py tests/*
+python_files = tests.py test_*.py *_tests.py tests/* */tests_*.py
