Implementation of the front from the Bootstrap Creative template. Start of theme customization. Setting up base.html and the home page. Creation of the first view which displays the template - Tests OK - Implementation of the first form for connection.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ omit =
 
 include = general/models.py
           general/management/commands/create.py
+          general/urls.py
           utils/download.py
           utils/clean.py
           utils/main.py
