--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ coverage = "*"
 django = "*"
 requests = "*"
 psycopg2-binary = "*"
+django-widget-tweaks = "*"
 
 [requires]
 python_version = "3.7"
